baculum: Fix #2565 status icon overlaps action buttons in API wizard

--- a/gui/baculum/themes/Baculum-v1/css/style.css
+++ b/gui/baculum/themes/Baculum-v1/css/style.css
@@ -335,7 +335,7 @@ h4 {
 
 #actions_fields .button {
 	display: inline-block;
-	width: 50px;
+	min-width: 50px;
 }
 
 #actions_fields .button input[type="submit"] {
